# Quad

./: .gitignore  .travis.yml  README.md  README.md~
calibration/: CMakeLists.txt  config.txt  quad_threads.cpp
calibration/MPU6050/: MPU6050.h  MPU6050_6Axis_MotionApps20.h  dmp.h
calibration/control/: AttitudeControl.cpp  AttitudeControl.h  MatricesAndVectors.h  PID_3DOF.h  QuatRotEuler.cpp  QuatRotEuler.h
calibration/rosserial/: embedded_linux_comms.c
calibration/threads/: keyboard_thread.cpp  keyboard_thread.h  mpu_thread.cpp  mpu_thread.h
gcs/gcs_ui/: gcs_ui.pro  mainwindow.ui
gcs/sampleCode/: README  button_publisher.py  button_subscriber.py  image_updater.py  key_publisher.py
multithreaded/: AccCalib.txt  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  configAtt.txt  configAtt_PosMode.txt  configPos.txt  data  kalman.cpp  kalman.h  motor_reset  quad_threads.cpp
multithreaded/MPU6050/: MPU6050_6Axis_MotionApps20.h  dmp.h
multithreaded/control/: #AttitudeControl.cpp#  AttitudeControl.cpp  AttitudeControl.h  MatricesAndVectors.cpp  MatricesAndVectors.h  PID_3DOF.cpp  PID_3DOF.h  QuatRotEuler.cpp  QuatRotEuler.h
multithreaded/rosserial/: embedded_linux_comms.c
multithreaded/threads/: Ros_threads.cpp  Ros_threads.h  control_thread.cpp  control_thread.h  keyboard_thread.cpp  keyboard_thread.h  logger_thread.cpp  logger_thread.h  motor_ctr_thread.cpp  motor_ctr_thread.h  mpu_thread.cpp  mpu_thread.h  pca_thread.cpp  pca_thread.h  print_thread.cpp  print_thread.h  stateMachine.cpp  stateMachine.h
ros/rosserial/: CMakeLists.txt  package.xml
ros/rosserial/launch/: ross.launch
(+185 files in other folders)
