<?xml version="1.0"?>
<package>
  <name>rosserial</name>
  <version>1.0.1</version>
  <description>The rosserial launch file package</description>

  <maintainer email="vatsagandhi@gmail.com">Vatsa Gandhi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>joy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosserial_python</build_depend>

  <run_depend>joy</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_python</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
